<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faebd7"
    tools:context=".battle.LocationFragment">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/data_element"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true">

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:background="@drawable/panels" />

                <Button
                    android:id="@+id/create_button"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"

                    android:background="@drawable/buttons"
                    android:fontFamily="@font/italic"
                    android:text="@string/BUTTON_CREATE"
                    android:textColor="@color/white"

                    app:backgroundTint="@color/buttons">

                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/italic"
                    android:text="@string/BUTTON_LOCATION"

                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="30dp">

                </TextView>

                <Button
                    android:id="@+id/close_button"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons"
                    android:fontFamily="@font/italic"
                    android:text="@string/BUTTON_CLOSE"
                    android:textColor="@color/white"

                    app:backgroundTint="@color/buttons">

                </Button>


            </RelativeLayout>
        </LinearLayout>


    </ScrollView>

</RelativeLayout>