<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LobbyFragment">


    <ImageView
        android:id="@+id/lobby_background"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_of_base" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tool_bar" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/panel_rang_img"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/rang_0"></ImageView>

                    <TextView
                        android:id="@+id/base_rang"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Звание"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/star"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TEXT_SCORE"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/base_score"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"

                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/magiccard"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/TEXT_MAGICKEY"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/magicKey_score"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"

                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/big_money"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/TEXT_MONEY"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/base_coins"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"></TextView>


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/base_img"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/index"
        app:srcCompat="@drawable/index">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/base_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/italic"
        android:text="Name"
        android:textColor="@color/lobby_text_color"
        android:textFontWeight="1000"

        android:textSize="45dp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rel_view4"
        android:layout_below="@+id/base_name"

        android:layout_marginStart="3dp"

        android:layout_marginTop="-2dp"
        android:layout_toStartOf="@+id/next"
        android:layout_toEndOf="@+id/base_img"


        android:scrollbars="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/base_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/italic"
                android:text="des"
                android:textColor="@color/lobby_text_color"
                android:textFontWeight="350"
                android:textSize="16dp"


                android:textStyle="italic" />

            <View
                android:id="@+id/levl_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:background="@drawable/buttons" />

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/rel_view3"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/base_img"

        android:layout_alignParentStart="true"

        android:layout_alignParentBottom="true"

        android:layout_marginLeft="5dp">

        <Button
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/italic"
            android:text="@string/BUTTON_LEVEL"
            android:textColor="@color/white"

            app:backgroundTint="@color/buttons">

            >

        </Button>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_view4"
        android:layout_width="wrap_content"
        android:layout_height="55dp"


        android:layout_alignParentBottom="true"


        android:layout_toEndOf="@+id/rel_view3">

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/italic"
            android:text="@string/BUTTON_PLAY"
            android:textColor="@color/white"
            app:backgroundTint="@color/buttons">

        </Button>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/rel_view5"
        android:layout_alignEnd="@+id/rel_view5">


        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/italic"
            android:text="@string/HELP"
            android:textColor="@color/white"
            app:backgroundTint="@color/buttons"

            >

        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_view5"
        android:layout_width="match_parent"
        android:layout_height="55dp"


        android:layout_above="@+id/rel_view3"


        android:layout_alignEnd="@+id/base_img"


        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/shop_button_lobby"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/italic"
            android:text="@string/SHOP"
            android:textColor="@color/white"
            app:backgroundTint="@color/buttons"

            >

        </Button>


    </RelativeLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"

        android:background="@drawable/ic_baseline_arrow_forward_24"
        app:backgroundTint="@color/black"></Button>

    <Button
        android:id="@+id/back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"

        android:background="@drawable/ic_baseline_arrow_back_24"
        app:backgroundTint="@color/black"></Button>

    <RelativeLayout
        android:id="@+id/notification_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        >

    </RelativeLayout>
</RelativeLayout>