<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solid_bottom"

    tools:context=".shop.PlayerShopFragment">


    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:minHeight="200dp"

        android:maxHeight="250dp"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/solid_right">

                <ImageView
                    android:id="@+id/shop_image_player"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/nameViewShop"
                    android:layout_marginTop="14dp"


                    android:src="@drawable/magiccard">

                </ImageView>

                <TextView
                    android:id="@+id/nameViewShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/italic"

                    android:text="@string/TEXT_MAGICKEY"
                    android:textColor="@color/black"
                    android:textFontWeight="800"

                    android:textSize="36dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">
            <!-- heart -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".125"
                android:background="@drawable/solid_bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/thunder"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:fontFamily="@font/italic"
                            android:text="@string/TEXT_COUNT"
                            android:textColor="@color/black"></TextView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/italic"
                            android:text="0"
                            android:textColor="@color/black"></TextView>


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <!-- speed -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".125"
                android:background="@drawable/solid_bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/coin"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/italic"
                            android:text="@string/TEXT_PRICE"
                            android:textColor="@color/black"></TextView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/italic"
                            android:text="0"
                            android:textColor="@color/black"></TextView>


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <!-- buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".125"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/solid_bottom"
                    android:orientation="horizontal">



                    <Button
                        android:id="@+id/buy_for_money"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/buttons"
                        android:fontFamily="@font/italic"
                        android:text="@string/BUTTON_BUY_FOR_MONEY"
                        android:textColor="@color/white"

                        app:backgroundTint="@color/buttons">

                    </Button>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".125"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>